# vilocify-sdk-python

./: .editorconfig  .gitignore  LICENSE  README.md  pyproject.toml
.github/: pull_request_template.md  renovate.json5
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: lint.yml  release.yml
docs/: CODEOWNERS  CONTRIBUTING.md  SECURITY.md
scripts/: lint.sh  release.sh
tests/: __init__.py  conftest.py  test_http.py  test_jsonapy.py  test_match.py  test_models.py
vilocify/: __init__.py  cli.py  http.py  jsonapy.py  match.py  models.py  py.typed
